--- a/PJA_Skills_032/project.json
+++ b/PJA_Skills_032/project.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.0.3",
-    "Parse": "1.6.2"
+    "Parse": "1.6.2",
+    "Prism.Mvvm": "1.1.1"
   },
   "frameworks": {
     "uap10.0": {}
