--- a/PJA_Skills_032/PJA_Skills_032.csproj
+++ b/PJA_Skills_032/PJA_Skills_032.csproj
@@ -96,12 +96,13 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model\Skill.cs" />
     <Compile Include="Model\TestUser.cs" />
+    <Compile Include="Pages\HomeUserCard.xaml.cs">
+      <DependentUpon>HomeUserCard.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\SettingsPage.xaml.cs">
       <DependentUpon>SettingsPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Pages\UserCard.xaml.cs">
-      <DependentUpon>UserCard.xaml</DependentUpon>
     </Compile>
     <Compile Include="ParseObjects\ParseHelper.cs" />
     <Compile Include="Shell.xaml.cs">
@@ -148,11 +149,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Pages\SettingsPage.xaml">
+    <Page Include="Pages\HomeUserCard.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\UserCard.xaml">
+    <Page Include="Pages\SettingsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
