--- a/PJA_Skills_032/PJA_Skills_032.csproj
+++ b/PJA_Skills_032/PJA_Skills_032.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Presentation\ObjectToMenuItemConverter.cs" />
     <Compile Include="Presentation\ShellViewModel.cs" />
     <Compile Include="ViewModel\HomeViewModel.cs" />
+    <Compile Include="ViewModel\MyProfileViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
